# data_bridge_parser_vessel

./: .env  .gitignore  .gitmodules  MarineTraffic.py  MarineTraffic_Testing.py  README.md  config.json  data.json  general.py  main.py  pyproject.toml  requirements.txt  test_post.py  trace_reserv.json  trace_reserv2.json  vehicle.py  version.history  viewed.txt
mt_operations/map/: mt_map_operations.py
parsers/world/: MarineTraffic.py  trace.json
trace/: MD.json
