[tool.poetry]
name = "parser-vessel"
version = "0.1.0"
description = ""
authors = ["Neo <neokkv@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
selenium = "^4.15.2"
requests = "^2.31.0"
chromedriver-autoinstaller = "^0.6.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
