[tool.poetry]
name = "parser-vessel"
version = "0.1.0"
description = ""
authors = ["Neo <neokkv@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
selenium = "^4.15.2"
requests = "^2.31.0"
chromedriver-auto-installer = {path = "lib/chromedriver_auto_installer"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
